travis/test/v4.stderr
./travis/test/v4.asm:13: error: instruction expected, found `v4dpwssd zmm10'
./travis/test/v4.asm:14: error: instruction expected, found `v4dpwssd zmm10'
./travis/test/v4.asm:15: error: instruction expected, found `v4dpwssd zmm10'
